<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_generator</name>
  <version>0.0.0</version>
  <description>Generates UAV waypoints for rack inspection</description>
  <maintainer email="nidhi@example.com">nidhi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>waypoint_interfaces</depend>
  <depend>ament_index_cpp</depend>
  
  <!-- Python dependencies for demo script -->
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
